# bioinf_algorithms

./: .gitignore  .gitmodules  LICENSE  README.md
jessica/: Bioinformatics Algorithms Chapter 1.ipynb  Bioinformatics Algorithms Chapter 2.ipynb  Bioinformatics Algorithms Chapter 3.ipynb  ba1a.py  ba1d.py  ba1g.py  ba2a.py  ba2c.py  findclumps.py  patternmatch.py
jessica/.ipynb_checkpoints/: Bioinformatics Algorithms Chapter 1-checkpoint.ipynb  Bioinformatics Algorithms Chapter 2-checkpoint.ipynb  Bioinformatics Algorithms Chapter 3-checkpoint.ipynb
luiz/: Cargo.toml  README.md  ba1a.py  ba1b.py  ba1c.py  ba1d.py  ba1e.py  ba1f.py  ba1g.py  ba1h.py  ba1i.py  ba1j.py  ba2a.py  ba2b.py  ba2c.py  ba2d.py  ba2d_i.py  ba2e.py  ba2f.py  ba2g.py  ba3a.py  ba3b.py  ba3c.py  ba3d.py
luiz/src/: ba1a.rs  ba1b.rs  ba1c.rs  ba1d.rs  ba1e.rs  ba1f.rs  ba1g.rs  ba1h.rs  ba1i.rs  ba1j.rs  ba2a.rs  lib.rs
luiz/tests/: ba1.rs  ba2.rs  ba3.rs
taylor/: Ch1.ipynb  Ch2.ipynb
tessa/chapter_1/: ba_1a.py  ba_1b.py  ba_1c.py  ba_1d.py  ba_1e.py  ba_1f.py  ba_1f_1g.ipynb  ba_1g.py  ba_1h.py  ba_1i.py  ba_1j.py
tessa/chapter_2/: ba_2a.py  ba_2c.py  ba_2c_v2.py
tessa/chapter_2/data/: rosalind_ba2c.txt
